--- a/webtapp.html
+++ b/webtapp.html
@@ -286,7 +286,7 @@
 
     function totalbfbottom() {
       var eTime = new Date() - startTime;
-      var pointTime = (mstats.apoints + mstats.bpoints) === 0 ? '-' : ((etime / 1000) / (mstats.apoints + mstats.bpoints)).toFixed(1)
+      var pointTime = (mstats.apoints + mstats.bpoints) === 0 ? '-' : ((eTime / 1000) / (mstats.apoints + mstats.bpoints)).toFixed(1)
       changeValue('b1', pointTime, 'Avg. Point Time (Sec)', pointTime)
       changeValue('b2', '', 'Avg. Game Time (min)', '')
       changeValue('b3', '', 'Avg. Service Game Time (min)', '')
