--- a/webtapp.html
+++ b/webtapp.html
@@ -300,7 +300,7 @@
 
     }
     function totalbfmiddle() {
-      changeValue('m1', mstats.totalagames + mstats.totalbgames, 'Games Won', mstats.totalagames + mstats.totalbgames)
+      changeValue('m1', mstats.totalagames + mstats.totalbgames, 'Games Played', mstats.totalagames + mstats.totalbgames)
       changeValue('m2', mstats.totalagames, 'Games Won', mstats.totalbgames)
       changeValue('m4', '', '', '')
       changeValue('m5', '', '', '')
@@ -337,11 +337,11 @@
       const tr3 = document.querySelector('.tr3');
       tr3.textContent = (mstats.apoints === 0 && mstats.bpoints === 0) ? '-' : (100 * mstats.bpoints / (mstats.apoints + mstats.bpoints)).toFixed(2)
       const tl4 = document.querySelector('.tl4');
-      tl4.textContent = (mstats.afirstpts + mstats.asecondpts === 0 || mstats.afirstpts + mstats.asecondpts === 0) ? '-' : ((mstats.bfirstpts + mstats.bsecondpts) / (mstats.afirstpts + mstats.asecondpts)).toFixed(2)
+      tl4.textContent = (mstats.afirstpts + mstats.asecondpts === 0 || mstats.bfirstpts + mstats.bsecondpts === 0) ? '-' : ((mstats.bfirstpts + mstats.bsecondpts) / (mstats.afirstpts + mstats.asecondpts)).toFixed(2)
       const tm4 = document.querySelector('.tm4');
       tm4.textContent = 'Rtn. to Svc. Points Ratio'
       const tr4 = document.querySelector('.tr4');
-      tr4.textContent = (mstats.afirstpts + mstats.asecondpts === 0 || mstats.afirstpts + mstats.asecondpts === 0) ? '-' : ((mstats.afirstpts + mstats.asecondpts) / (mstats.bfirstpts + mstats.bsecondpts)).toFixed(2)
+      tr4.textContent = (mstats.afirstpts + mstats.asecondpts === 0 || mstats.bfirstpts + mstats.bsecondpts === 0) ? '-' : ((mstats.afirstpts + mstats.asecondpts) / (mstats.bfirstpts + mstats.bsecondpts)).toFixed(2)
 
       changeValue('t5', '', '', '')
       changeValue('t6', '', '', '')
@@ -352,7 +352,9 @@
     }
     function overviewbfbottom() {
       var eTime = new Date() - startTime;
-      changeValue('b1', '', 'Points Dominance', '')
+      var apd = (mstats.afirstpts + mstats.asecondpts === 0 || mstats.bfirstpts + mstats.bsecondpts === 0) ? '-' : ((1 - ((mstats.bfirstwonpts + mstats.bsecondwonpts) / (mstats.bfirstpts + mstats.bsecondpts))) / ((mstats.afirstwonpts + mstats.asecondwonpts) / (mstats.afirstpts + mstats.asecondpts))).toFixed(2)
+      var bpd = (mstats.afirstpts + mstats.asecondpts === 0 || mstats.bfirstpts + mstats.bsecondpts === 0) ? '-' : ((1 - ((mstats.afirstwonpts + mstats.asecondwonpts) / (mstats.afirstpts + mstats.asecondpts))) / ((mstats.bfirstwonpts + mstats.bsecondwonpts) / (mstats.bfirstpts + mstats.bsecondpts))).toFixed(2)
+      changeValue('b1', apd, 'Points Dominance', '')
       changeValue('b2', mstats.apoints, 'Total Points Won', mstats.bpoints)
       changeValue('b3', formatTotalTime(eTime), 'Match Time', formatTotalTime(eTime))
       changeValue('b4', '', '', '')
@@ -476,11 +478,11 @@
       const mr2 = document.querySelector('.mr2');
       mr2.textContent = ''
       const ml1 = document.querySelector('.ml1');
-      ml1.textContent = ''
+      ml1.textContent = ((mstats.afirstpts + mstats.asecondpts) === 0) ? '-' : (100 * (mstats.afirstwonpts + mstats.asecondwonpts) / (mstats.afirstpts + mstats.asecondpts)).toFixed(2)
       const mm1 = document.querySelector('.mm1');
       mm1.textContent = 'Service Points Won %'
       const mr1 = document.querySelector('.mr1');
-      mr1.textContent = ''
+      mr1.textContent = ((mstats.bfirstpts + mstats.bsecondpts) === 0) ? '-' : (100 * (mstats.bfirstwonpts + mstats.bsecondwonpts) / (mstats.bfirstpts + mstats.bsecondpts)).toFixed(2)
       const ml6 = document.querySelector('.ml6');
       ml6.textContent = ''
       const mm6 = document.querySelector('.mm6');
